--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@craco/craco": "^5.9.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "postcss": "^8.5.6",
     "framer-motion": "^12.23.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
