Frontend & backend start sync change3

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "start": "node app.js",
-    "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run start --prefix backend\""
+    "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run start --prefix backend\"",
+    "start-backend": "cross-env NODE_ENV=development node backend/app.js"
   },
   "dependencies": {
     "@faker-js/faker": "^9.7.0",
