--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
