--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^12.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
